# youtube-ai

./: .gitignore  LICENSE  README.md
youtube-ai/: .env.example  README.md  pyproject.toml
youtube-ai/src/: __init__.py  video.py
youtube-ai/src/models/: __init__.py  note.py  video.py
youtube-ai/src/youtube_ai_agent/: __init__.py  config.py  main.py
youtube-ai/src/youtube_ai_agent/services/: __init__.py  ai_service.py  transcript.py
youtube-ai/test_output/: erica-kirk-vergibt-dem-schutzen-ihres-mannes-charl.md
