[project]
name = "youtube-ai"
version = "0.1.0"
description = "AI Agent to convert YouTube videos to structured markdown notes"
authors = [{name = "Harun Saleh", email = "harunsaleh1207l@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=0.25.0",
    "youtube-transcript-api>=0.6.0",
    "python-slugify>=8.0.0",
    "click>=8.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
